--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -15,12 +15,20 @@
 			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<StackPanel x:Name="ToolPanel" Orientation="Horizontal" Grid.Row="1">
-			<InkToolbar x:Name="inkToolbar"
-					VerticalAlignment="Top"
-					Margin="10,0,10,0"
+        <CommandBar RequestedTheme="Dark" DefaultLabelPosition="Right">
+            <CommandBar.Content>
+                <InkToolbar x:Name="inkToolbar"
 					TargetInkCanvas="{x:Bind inkCanvas}">
-			</InkToolbar>
+                </InkToolbar>
+            </CommandBar.Content>
+            <AppBarButton Icon="Save" Label="Save" Click="saveInk_ClickAsync"/>
+            <AppBarButton Icon="OpenFile" Label="Load"/>
+            <AppBarButton Icon="Undo" Label="Undo"/>
+            <AppBarButton Icon="Redo" Label="Redo"/>
+        </CommandBar>
+
+		<StackPanel x:Name="ToolPanel" Orientation="Horizontal" Grid.Row="1">
+			
 		</StackPanel>
 
 		<Grid x:Name="drawingCanvas" Grid.Row="2">
@@ -28,18 +36,7 @@
 			<InkCanvas x:Name="inkCanvas"/>
 		</Grid>
 
-		<Grid Grid.Row="3">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="auto"/>
-				<RowDefinition Height="auto"/>
-			</Grid.RowDefinitions>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="auto"/>
-				<ColumnDefinition Width="*"/>
-			</Grid.ColumnDefinitions>
-			<Button Grid.Row="1" x:Name="recogniseShape" Click="recogniseShape_ClickAsync"
-					Content="Recognise Shape"
-					Margin="10,10,10,10"/>
-		</Grid>
+		
+        
 	</Grid>
 </Page>
