--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -23,6 +23,7 @@
             </CommandBar.Content>
             <AppBarButton Icon="Save" Label="Save" Click="saveInk_ClickAsync"/>
             <AppBarButton Icon="OpenFile" Label="Load" Click="loadInk_ClickAsync"/>
+            <AppBarButton Icon="Back" Label="Back" Click="backToMenu"/>
             <AppBarSeparator/>
             <AppBarButton Icon="Undo" Label="Undo"/>
             <AppBarButton Icon="Redo" Label="Redo"/>
