Simplified loading procedure

--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -20,11 +20,17 @@
                 <InkToolbar x:Name="inkToolbar"
 					TargetInkCanvas="{x:Bind inkCanvas}">
                 </InkToolbar>
+                
             </CommandBar.Content>
-            <AppBarButton Icon="Save" Label="Save" Click="saveInk_ClickAsync"/>
-            <AppBarButton Icon="OpenFile" Label="Load" Click="loadInk_ClickAsync"/>
-            <AppBarButton Icon="Save" Label="Save All" Click="saveAll"/>
-            <AppBarButton Icon="OpenFile" Label="Load All" Click="loadAll"/>
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="Like" />
+                <AppBarButton Label="Dislike"/>
+            </CommandBar.SecondaryCommands>
+
+            <AppBarButton Icon="Save" Label="Save" Click="saveAll"/>
+            <AppBarButton Icon="OpenFile" Label="Load" Click="loadAll"/>
+ 
 
             <AppBarButton Icon="Back" Label="Back" Click="backToMenu"/>
             <AppBarSeparator/>
