--- a/HelloWorld/Home.xaml
+++ b/HelloWorld/Home.xaml
@@ -5,27 +5,51 @@
     xmlns:local="using:HelloWorld"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local1="using:HelloWorld.Utils"
     mc:Ignorable="d" Margin="0,0,0,-4">
 
-    <StackPanel VerticalAlignment="Center" Margin="0,0,0,0">
-        <TextBlock HorizontalAlignment ="Center" VerticalAlignment="Center"  Text="Protocol 2" FontSize="72" FontFamily="Segoe UI" FontWeight="Bold"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button HorizontalAlignment="Center" Width="150" Click="Button_Click" Padding="9,4,8,4" Margin="16,0,11,0">
-                <StackPanel>
-                    <TextBlock Text="🆕" FontSize="48" HorizontalAlignment="Center"/>
-                    <TextBlock Text="New Prototype" Foreground="Black"
-                   HorizontalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-            <Button HorizontalAlignment="Center" Width="150" Click="LoadClick" Margin="16,0,16,0">
-                <StackPanel>
-                    <TextBlock Text="🗄" FontSize="48" HorizontalAlignment="Center"/>
-                    <TextBlock Text="Load Prototype" Foreground="Black"
-                   HorizontalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
+    <Pivot x:Name="rootPivot" Title="Protocol 2">
+        <Pivot.RightHeader>
+            <CommandBar OverflowButtonVisibility="Collapsed" Background="Transparent">
+                <AppBarButton Icon="Add" Click="Button_Click"/>
+                <AppBarButton Icon="OpenLocal" Click="LoadClick"/>
+                <AppBarSeparator/>
+                <AppBarButton Icon="Edit"/>
+                <AppBarButton Icon="Delete"/>
+                <AppBarSeparator/>
+                <AppBarButton Icon="Save" Click="TestSaveShow"/>
+            </CommandBar>
+
+        </Pivot.RightHeader>
         
-    </StackPanel>
         
+        <PivotItem Header="Recents">
+            <GridView ItemsSource="{x:Bind vm.Recents}">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="local1:Recents">
+
+                        <StackPanel Height="280" Width="320" Margin="12">
+                            <Rectangle Height="180" Width="320" Fill="ForestGreen" Stretch="UniformToFill"/>
+                            <StackPanel Margin="0,12">
+                                <TextBlock Text="{x:Bind Name}"/>
+                                <TextBlock Text="{x:Bind Path}" Style="{ThemeResource CaptionTextBlockStyle}" Foreground="{ThemeResource SystemControlPageTextBaseMediumBrush}"/>
+                            </StackPanel>
+                        </StackPanel>
+
+
+                      
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+
+                <GridView.Items>
+                    <x:String>Bepis</x:String>
+                </GridView.Items>
+
+
+            </GridView>
+        </PivotItem>
+        
+    </Pivot>
+
+
 </Page>
