--- a/HelloWorld/Views/NewProject.xaml
+++ b/HelloWorld/Views/NewProject.xaml
@@ -1,8 +1,8 @@
 ﻿<ContentDialog
-    x:Class="HelloWorld.Views.NewProject"
+    x:Class="Protocol2.Views.NewProject"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HelloWorld.Views"
+    xmlns:local="using:Protocol2.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Name="newProjectDialog"
