working on creating groups for selection

--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -50,6 +50,7 @@
                 </AppBarButton.Flyout>
             </AppBarButton>
             <AppBarToggleButton Icon="MapPin" Label="Comment Mode"/>
+            <AppBarButton Label="Combine Strokes" Click="Combine_Strokes"/>
         </CommandBar>
 
 
