--- a/HelloWorld/MainPage.xaml
+++ b/HelloWorld/MainPage.xaml
@@ -23,6 +23,12 @@
                         <TextBlock Text="Draw Path" FontSize="18" VerticalAlignment="Center" Margin="20,0,0,0"/>
                     </StackPanel>
                 </Button>
+                <Button Click="Move_Selected_Mode" Background="Transparent" Width="250">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="&#xE759;" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"/>
+                        <TextBlock Text="Move Selected" FontSize="18" VerticalAlignment="Center" Margin="20,0,0,0"/>
+                    </StackPanel>
+                </Button>
 
                 <Button Content="Group Strokes" Width="250" Height="50" HorizontalAlignment="Center" Click="Combine_Strokes" Background="Transparent"/>
                 <Button x:Name="Test2" Content="test 2" Width="250" Height="50" HorizontalAlignment="Center" Background="Transparent"/>
